--- a/thoai.html
+++ b/thoai.html
@@ -160,7 +160,7 @@
             <nav>
                 <ul>
                     <li><a href="#">Trang chủ</a></li>
-                    <li><a href="#" class="active">Thành viên 1</a></li>
+                    <li><a href="thoai.html" class="active">Ngô Huỳnh Gia Thoại</a></li>
                     <li><a href="#">Thành viên 2</a></li>
                     <li><a href="#">Thành viên 3</a></li>
                     <li><a href="#">Thành viên 4</a></li>
@@ -170,13 +170,10 @@
         </div>
     </header>
     <div class="main_container" style="display: block; text-align: center; border-bottom-left-radius: 50px;">
-        <p class="introduction" style="margin-top: -1px; font-size: xx-large;">I'm Thoai</p>
-        <p class="explain" style="font-size: medium; width: 80%; margin: 0 auto;">Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
-    </div>
+        <h1 style="font-family: 'Montserrat', sans-serif; font-weight: 700; font-size: 2.8rem; color: #111;">Hi! I'm Thoai</h1>
 
-<h1 class="hobbies-title" style="font-size: 2.5rem; margin: 40px 0; color: #333; text-align: center;">
-  Hobbies
-</h1>
+        <p class="explain" style="font-size: medium; width: 80%; margin: 0 auto;"> A student of University of Science - VNUHCM, majoring in Computer Networking. I have a strong passion for coding and love to explore new technologies. I also enjoy learning about web development, software engineering and network security.</p>
+        <h1 class="hobbies-title" style="font-size: 2.5rem; margin: 40px 0; color: #333; text-align: center;">Hobbies</h1>
 
 <div class="hobby"
      style="display: flex; flex-wrap: wrap; width: 80%; margin: 50px auto; text-align: center; gap: 20px;">
@@ -284,7 +281,7 @@
 
 <script>
   document.querySelectorAll('.skill li').forEach(li => {
-    li.addEventListener('mouseover', () => li.style.transform = 'scale(1.1)');
+    li.addEventListener('mouseover', () => li.style.transform = 'scale(1.2)');
     li.addEventListener('mouseout', () => li.style.transform = 'scale(1)');
   });
 </script>
