--- a/home.html
+++ b/home.html
@@ -163,7 +163,7 @@
                     <li><a href="#">Thành viên 2</a></li>
                     <li><a href="#">Thành viên 3</a></li>
                     <li><a href="#">Thành viên 4</a></li>
-                    <li><a href="#">Thành viên 5</a></li>
+                    <li><a href="thanhvien5.html">Thành viên 5</a></li>
                 </ul>
             </nav>
         </div>
@@ -202,8 +202,8 @@
                 </div>
                 <div class="member">
                     <img src="" alt="Ảnh không hiển thị được">
-                    <h3>Thành viên</h3>
-                    <p>Giới thiệu</p>
+                    <h3>Đinh Viết Hải</h3>
+                    <p>MSSV - 23127045</p>
                 </div>
             </div>
         </div>
