--- a/home.html
+++ b/home.html
@@ -201,7 +201,7 @@
                     <p>Giới thiệu</p>
                 </div>
                 <div class="member">
-                    <img src="" alt="Ảnh không hiển thị được">
+                    <img src="hai.jpg">
                     <h3>Đinh Viết Hải</h3>
                     <p>MSSV - 23127045</p>
                 </div>
