--- a/thoai.html
+++ b/thoai.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang Chủ</title>
+    <title>23127124</title>
     <link rel="stylesheet" href="styles.css">
     <style>
 
@@ -12,7 +12,7 @@
             line-height: 1.6;
             color: #333;
             background-color: #f9f9f9;
-            background-image: url(bg.png);  background-size: cover; background-position: top center; background-repeat: repeat-y
+            background-image: url(assets/bg.png);  background-size: cover; background-position: top center; background-repeat: repeat-y
         }
 
         .container {
@@ -170,28 +170,28 @@
         </div>
     </header>
     <div class="main_container" style="display: block; text-align: center; border-bottom-left-radius: 50px;">
-        <h1 style="font-family: 'Montserrat', sans-serif; font-weight: 700; font-size: 2.8rem; color: #111;">Hi! I'm Thoai</h1>
+        <h1 style="font-family: 'Montserrat', sans-serif; font-weight: 700; font-size: 2.8rem; color: #111;">Xin chào! Tôi là Thoại</h1>
 
-        <p class="explain" style="font-size: medium; width: 80%; margin: 0 auto;"> A student of University of Science - VNUHCM, majoring in Computer Networking. I have a strong passion for coding and love to explore new technologies. I also enjoy learning about web development, software engineering and network security.</p>
-        <h1 class="hobbies-title" style="font-size: 2.5rem; margin: 40px 0; color: #333; text-align: center;">Hobbies</h1>
+        <p class="explain" style="font-size: medium; width: 80%; margin: 0 auto;"> Tôi là sinh viên khóa 23 (23127124) của Trường Đại học Khoa học - ĐHQG-HCM, chuyên ngành Mạng máy tính. Tôi có niềm đam mê mãnh liệt với lập trình và thích khám phá các công nghệ mới. Tôi cũng thích tìm hiểu về phát triển web, kỹ thuật phần mềm và an ninh mạng. Ngoài giờ học, tôi có sở thích thi đấu giải leetcode với những người bạn, chơi game chung với nhóm và nghe nhạc, đọc truyện hoặc xem phim khi ở một mình</p>
+        <h1 class="hobbies-title" style="font-size: 2.5rem; margin: 40px 0; color: #333; text-align: center;">Sở thích</h1>
 
 <div class="hobby"
      style="display: flex; flex-wrap: wrap; width: 80%; margin: 50px auto; text-align: center; gap: 20px;">
 
-  <div class="hobby-item" style="background-image: url('game.jpg');">
-    <div class="overlay">Game</div>
+  <div class="hobby-item" style="background-image: url('assets/game.jpg');">
+    <div class="overlay">Chơi game</div>
   </div>
 
-  <div class="hobby-item" style="background-image: url('music.jpg');">
-    <div class="overlay">Music</div>
+  <div class="hobby-item" style="background-image: url('assets/music.jpg');">
+    <div class="overlay">Nghe nhạc</div>
   </div>
 
-  <div class="hobby-item" style="background-image: url('movie.jpg');">
-    <div class="overlay">Movie</div>
+  <div class="hobby-item" style="background-image: url('assets/movie.jpg');">
+    <div class="overlay">Xem phim</div>
   </div>
 
-  <div class="hobby-item" style="background-image: url('code.png');">
-    <div class="overlay">Coding</div>
+  <div class="hobby-item" style="background-image: url('assets/code.png');">
+    <div class="overlay">Lập trình</div>
   </div>
 </div>
 
@@ -262,7 +262,7 @@
     box-shadow: 0 4px 25px rgba(0,0,0,0.1);
     transition: transform 0.3s;
 ">
-  <h1 style="font-size: 2rem; margin-bottom: 25px; color: #334;">My Skills</h1>
+  <h1 style="font-size: 2rem; margin-bottom: 25px; color: #334;">Kỹ năng</h1>
   <ul style="list-style: none; padding: 0; display: flex; flex-wrap: wrap; justify-content: center; gap: 20px;">
     <li style="background: white; padding: 15px 25px; border-radius: 12px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); transition: 0.3s; font-weight: 500;">
       HTML & CSS
