--- a/phuc_file.html
+++ b/phuc_file.html
@@ -133,7 +133,7 @@
 
     <main>
         <div class="info-container">
-            <h1>Về tôi.</h1>
+            <h1>Xin chào.</h1>
             <h2>Tôi là sinh viên của Trường Đại học Khoa học - ĐHQG-HCM.</h2>
             <p>Tên tôi là Nguyễn Thiện Phúc - 23127456.</p>
             <p>Nói về bản thân mình, tôi là một người yêu thích công nghệ và vọc vạch máy móc, đặc biệt là trong lĩnh vực lập trình và phát triển phần mềm. Ngoài ra, tôi còn có một số tài lẻ như chơi thể thao và âm nhạc.</p>
