--- a/home.html
+++ b/home.html
@@ -116,6 +116,8 @@
         .member img {
             border-radius: 50%;
             margin-bottom: 15px;
+            width: 100px;
+            height: 100px;
         }
 
         .member h3 {
@@ -171,8 +173,8 @@
 
     <section class="welcome">
         <div class="container">
-            <h1>Chào mừng đến với trang web nhóm ...</h1>
-            <p>....</p>
+            <h1>Chào mừng đến với trang web nhóm</h1>
+            <p></p>
         </div>
     </section>
 
