--- a/thanhvien4.html
+++ b/thanhvien4.html
@@ -131,15 +131,15 @@
 <body>
     <header>
         <div class="container">
-            <a href="#" class="logo">Nhóm ...</a>
+            <a href="home.html" class="logo">Nhóm Web Development</a>
             <nav>
                 <ul>
-                    <li><a href="index.html">Trang chủ</a></li>
-                    <li><a href="#">Thành viên 1</a></li>
-                    <li><a href="#">Thành viên 2</a></li>
-                    <li><a href="#">Thành viên 3</a></li>
-                    <li><a href="phuc_file.html" class="active">Thành viên 4</a></li>
-                    <li><a href="#">Thành viên 5</a></li>
+                    <li><a href="home.html">Trang chủ</a></li>
+                    <li><a href="thanhvien1.html">Thành viên 1</a></li>
+                    <li><a href="thanhvien2.html">Thành viên 2</a></li>
+                    <li><a href="thanhvien3.html">Thành viên 3</a></li>
+                    <li><a href="thanhvien4.html" class="active">Thành viên 4</a></li>
+                    <li><a href="thanhvien5.html">Thành viên 5</a></li>
                 </ul>
             </nav>
         </div>
