--- a/thanhvien5.html
+++ b/thanhvien5.html
@@ -213,7 +213,7 @@
 
     <header>
         <div class="container">
-            <a href="home.html" class="logo">Nhóm ...</a>
+            <a href="home.html" class="logo">Nhóm Web Development</a>
             <nav>
                 <ul>
                     <li><a href="home.html">Trang chủ</a></li>
