--- a/home.html
+++ b/home.html
@@ -157,14 +157,14 @@
 
     <header>
         <div class="container">
-            <a href="#" class="logo">Nhóm ...</a>
+            <a href="home.html" class="logo">Nhóm Web Development</a>
             <nav>
                 <ul>
-                    <li><a href="#" class="active">Trang chủ</a></li>
-                    <li><a href="#">Thành viên 1</a></li>
-                    <li><a href="#">Thành viên 2</a></li>
-                    <li><a href="#">Thành viên 3</a></li>
-                    <li><a href="#">Thành viên 4</a></li>
+                    <li><a href="home.html" class="active">Trang chủ</a></li>
+                    <li><a href="thanhvien1.html">Thành viên 1</a></li>
+                    <li><a href="thanhvien2.html">Thành viên 2</a></li>
+                    <li><a href="thanhvien3.html">Thành viên 3</a></li>
+                    <li><a href="thanhvien4.html">Thành viên 4</a></li>
                     <li><a href="thanhvien5.html">Thành viên 5</a></li>
                 </ul>
             </nav>
