--- a/home.html
+++ b/home.html
@@ -155,12 +155,12 @@
 
     <header>
         <div class="container">
-            <a href="#" class="logo">Nhóm ...</a>
+            <a href="#" class="logo">Nhóm 2k3-2k5</a>
             <nav>
                 <ul>
                     <li><a href="#" class="active">Trang chủ</a></li>
                     <li><a href="#">Thành viên 1</a></li>
-                    <li><a href="#">Thành viên 2</a></li>
+                    <li><a href="Đạo.html">Đạo</a></li>
                     <li><a href="#">Thành viên 3</a></li>
                     <li><a href="#">Thành viên 4</a></li>
                     <li><a href="thanhvien5.html">Thành viên 5</a></li>
@@ -171,8 +171,7 @@
 
     <section class="welcome">
         <div class="container">
-            <h1>Chào mừng đến với trang web nhóm ...</h1>
-            <p>....</p>
+            <h1>Chào mừng đến với trang web nhóm 2k3-2k5</h1>
         </div>
     </section>
 
@@ -181,9 +180,9 @@
             <h2>Các thành viên</h2>
             <div class="all-members-grid">
                 <div class="member">
-                    <img src="" alt="Ảnh không hiển thị được">
-                    <h3>Thành viên</h3>
-                    <p>Giới thiệu</p>
+                    <img src="assets/assets_Alvin/Alvin.jpg" alt="Ảnh không hiển thị được" width="150px" height="150px">
+                    <h3>Trần Quang Đạo</h3>
+                    <p>Rất vui được gặp các bạn trong team. Cùng cố gắng làm thật tốt đồ án môn này nhé.</p>
                 </div>
                 <div class="member">
                     <img src="" alt="Ảnh không hiển thị được">
@@ -201,7 +200,7 @@
                     <p>Giới thiệu</p>
                 </div>
                 <div class="member">
-                    <img src="hai.jpg">
+                    <img src="hai.jpg" width="150px" height="150px">
                     <h3>Đinh Viết Hải</h3>
                     <p>MSSV - 23127045</p>
                 </div>
@@ -211,7 +210,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Nhóm ...</p>
+            <p>&copy; 2025 Nhóm 2k3-2k5</p>
         </div>
     </footer>
 
