change directory structure

--- a/home.html
+++ b/home.html
@@ -203,7 +203,7 @@
                     <p>Giới thiệu</p>
                 </div>
                 <div class="member">
-                    <img src="hai.jpg">
+                    <img src="assets/hai.jpg">
                     <h3>Đinh Viết Hải</h3>
                     <p>MSSV - 23127045</p>
                 </div>
@@ -213,7 +213,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Nhóm ...</p>
+            <p>&copy; 2025 Nhóm Web Development - 23KTPM1 - GA01</p>
         </div>
     </footer>
 
