--- a/thanhvien1.html
+++ b/thanhvien1.html
@@ -290,7 +290,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Nhóm ...</p>
+            <p>&copy; 2025 Nhóm Web Development - 23KTPM1 - GA01</p>
         </div>
     </footer>
 
