--- a/thanhvien5.html
+++ b/thanhvien5.html
@@ -268,7 +268,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Nhóm ...</p>
+            <p>&copy; 2025 Nhóm Web Development - 23KTPM1 - GA01</p>
         </div>
     </footer>
 
