--- a/thoai.html
+++ b/thoai.html
@@ -160,7 +160,7 @@
             <nav>
                 <ul>
                     <li><a href="#">Trang chủ</a></li>
-                    <li><a href="thoai.html" class="active">Ngô Huỳnh Gia Thoại</a></li>
+                    <li><a href="thoai.html" class="active">Thành viên 1</a></li>
                     <li><a href="#">Thành viên 2</a></li>
                     <li><a href="#">Thành viên 3</a></li>
                     <li><a href="#">Thành viên 4</a></li>
@@ -173,8 +173,10 @@
         <h1 style="font-family: 'Montserrat', sans-serif; font-weight: 700; font-size: 2.8rem; color: #111;">Xin chào! Tôi là Thoại</h1>
 
         <p class="explain" style="font-size: medium; width: 80%; margin: 0 auto;"> Tôi là sinh viên khóa 23 (23127124) của Trường Đại học Khoa học - ĐHQG-HCM, chuyên ngành Mạng máy tính. Tôi có niềm đam mê mãnh liệt với lập trình và thích khám phá các công nghệ mới. Tôi cũng thích tìm hiểu về phát triển web, kỹ thuật phần mềm và an ninh mạng. Ngoài giờ học, tôi có sở thích thi đấu giải leetcode với những người bạn, chơi game chung với nhóm và nghe nhạc, đọc truyện hoặc xem phim khi ở một mình</p>
-        <h1 class="hobbies-title" style="font-size: 2.5rem; margin: 40px 0; color: #333; text-align: center;">Sở thích</h1>
+        <p> Liên hệ với tôi thông qua <a href="mailto:nhgthoai23@clc.fitus.edu.vn">nhgthoai23@clc.fitus.edu.vn</a></p>
+        <h1 class="hobbies-title" style="font-size: 2.5rem; margin: 40px 0; color: #333; text-align: center;">Sở thích</h1> 
 
+    </div>
 <div class="hobby"
      style="display: flex; flex-wrap: wrap; width: 80%; margin: 50px auto; text-align: center; gap: 20px;">
 
@@ -193,6 +195,9 @@
   <div class="hobby-item" style="background-image: url('assets/code.png');">
     <div class="overlay">Lập trình</div>
   </div>
+</div>
+
+  
 </div>
 
 <style>
@@ -286,11 +291,9 @@
   });
 </script>
 
-
-
     <footer>
         <div class="container">
-            <p>&copy; 2025 Nhóm ...</p>
+            <p>&copy; 2025 Ngô Huỳnh Gia Thoại. All rights reserved</p>
         </div>
     </footer>
 
