--- a/home.html
+++ b/home.html
@@ -187,14 +187,14 @@
                     <p>Rất vui được gặp các bạn trong team. Cùng cố gắng làm thật tốt đồ án môn này nhé.</p>
                 </div>
                 <div class="member">
-                    <img src="" alt="Ảnh không hiển thị được">
-                    <h3>Thành viên</h3>
-                    <p>Giới thiệu</p>
+                    <img src="assets/thoai.jpg" alt="Ảnh không hiển thị được">
+                    <h3>Ngô Huỳnh Gia Thoại</h3>
+                    <p>Mong được anh em giúp đỡ để đủ điểm qua môn</p>
                 </div>
                 <div class="member">
-                    <img src="" alt="Ảnh không hiển thị được">
-                    <h3>Thành viên</h3>
-                    <p>Giới thiệu</p>
+                    <img src="assets/phucbill.jpg" alt="Ảnh không hiển thị được">
+                    <h3>Nguyễn Thiên Phúc</h3>
+                    <p>Ước gì được gánh!!</p>
                 </div>
                 <div class="member">
                     <img src="" alt="Ảnh không hiển thị được">
