--- a/Thoại.html
+++ b/Thoại.html
@@ -156,19 +156,20 @@
 
     <header>
         <div class="container">
-            <a href="home.html" class="logo">Nhóm Web Development</a>
+            <a href="home.html" class="logo">Nhóm Web Development - 23KTPM1 - GA01 - 2025</a>
             <nav>
                 <ul>
                     <li><a href="home.html">Trang chủ</a></li>
-                    <li><a href="thanhvien1.html" class="active">Thành viên 1</a></li>
-                    <li><a href="thanhvien2.html">Thành viên 2</a></li>
-                    <li><a href="thanhvien3.html">Thành viên 3</a></li>
-                    <li><a href="thanhvien4.html">Thành viên 4</a></li>
-                    <li><a href="thanhvien5.html">Thành viên 5</a></li>
+                    <li><a href="Thoại.html"  class="active">Thoại</a></li>
+                    <li><a href="Đạo.html">Đạo</a></li>
+                    <li><a href="Phúc.html">Phúc</a></li>
+                    <li><a href="#">Thành viên 4</a></li>
+                    <li><a href="Hải.html">Hải</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+
     <div class="main_container" style="display: block; text-align: center; border-bottom-left-radius: 50px;">
         <h1 style="font-family: 'Montserrat', sans-serif; font-weight: 700; font-size: 2.8rem; color: #111;">Xin chào! Tôi là Thoại</h1>
 
