--- a/home.html
+++ b/home.html
@@ -157,10 +157,10 @@
 
     <header>
         <div class="container">
-            <a href="#" class="logo">Nhóm Web Development - 23KTPM1 - GA01 - 2025</a>
+            <a href="home.html" class="logo">Nhóm Web Development - 23KTPM1 - GA01 - 2025</a>
             <nav>
                 <ul>
-                    <li><a href="#" class="active">Trang chủ</a></li>
+                    <li><a href="home.html" class="active">Trang chủ</a></li>
                     <li><a href="Thoại.html">Thoại</a></li>
                     <li><a href="Đạo.html">Đạo</a></li>
                     <li><a href="Phúc.html">Phúc</a></li>
