--- a/Hải.html
+++ b/Hải.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thành Viên 5 - Nhóm ...</title>
+    <title>23127045</title>
 
     <style>
         body {
@@ -213,20 +213,19 @@
 
     <header>
         <div class="container">
-            <a href="home.html" class="logo">Nhóm Web Development</a>
+            <a href="home.html" class="logo">Nhóm Web Development - 23KTPM1 - GA01 - 2025</a>
             <nav>
                 <ul>
                     <li><a href="home.html">Trang chủ</a></li>
-                    <li><a href="thanhvien1.html">Thành viên 1</a></li>
-                    <li><a href="thanhvien2.html">Thành viên 2</a></li>
-                    <li><a href="thanhvien3.html">Thành viên 3</a></li>
-                    <li><a href="thanhvien4.html">Thành viên 4</a></li>
-                    <li><a href="thanhvien5.html" class="active">Thành viên 5</a></li>
+                    <li><a href="Thoại.html">Thoại</a></li>
+                    <li><a href="Đạo.html">Đạo</a></li>
+                    <li><a href="Phúc.html">Phúc</a></li>
+                    <li><a href="#">Thành viên 4</a></li>
+                    <li><a href="Hải.html" class="active">Hải</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-
     <section class="member-hero">
         <div class="container">
             <h1>Chào mừng đến với trang của tôi</h1>
