--- a/Phúc.html
+++ b/Phúc.html
@@ -131,20 +131,19 @@
 <body>
     <header>
         <div class="container">
-            <a href="home.html" class="logo">Nhóm Web Development</a>
+            <a href="home.html" class="logo">Nhóm Web Development - 23KTPM1 - GA01 - 2025</a>
             <nav>
                 <ul>
                     <li><a href="home.html">Trang chủ</a></li>
-                    <li><a href="thanhvien1.html">Thành viên 1</a></li>
-                    <li><a href="thanhvien2.html">Thành viên 2</a></li>
-                    <li><a href="thanhvien3.html">Thành viên 3</a></li>
-                    <li><a href="thanhvien4.html" class="active">Thành viên 4</a></li>
-                    <li><a href="thanhvien5.html">Thành viên 5</a></li>
+                    <li><a href="Thoại.html">Thoại</a></li>
+                    <li><a href="Đạo.html">Đạo</a></li>
+                    <li><a href="Phúc.html" class="active">Phúc</a></li>
+                    <li><a href="#">Thành viên 4</a></li>
+                    <li><a href="Hải.html">Hải</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-
     <main>
         <div class="main">
             <div class="info-container">
