modify studentID thoai phuc

--- a/home.html
+++ b/home.html
@@ -188,12 +188,12 @@
                 </div>
                 <div class="member">
                     <img src="assets/thoai.jpg" alt="Ảnh không hiển thị được">
-                    <h3>Ngô Huỳnh Gia Thoại</h3>
+                    <h3>Ngô Huỳnh Gia Thoại - 23127124</h3>
                     <p>Mong được anh em giúp đỡ để đủ điểm qua môn</p>
                 </div>
                 <div class="member">
                     <img src="assets/phucbill.jpg" alt="Ảnh không hiển thị được">
-                    <h3>Nguyễn Thiên Phúc</h3>
+                    <h3>Nguyễn Thiên Phúc - 23127456</h3>
                     <p>Ước gì được gánh!!</p>
                 </div>
                 <div class="member">
