--- a/home.html
+++ b/home.html
@@ -203,8 +203,8 @@
                 </div>
                 <div class="member">
                     <img src="assets/hai.jpg">
-                    <h3>Đinh Viết Hải</h3>
-                    <p>MSSV - 23127045</p>
+                    <h3>Đinh Viết Hải - 23127045</h3>
+                    <p>Hợp tác vui vẻ cùng qua môn ạ</p>
                 </div>
             </div>
         </div>
@@ -217,4 +217,5 @@
     </footer>
 
 </body>
+
 </html>
