--- a/Hải.html
+++ b/Hải.html
@@ -220,7 +220,7 @@
                     <li><a href="Thoại.html">Thoại</a></li>
                     <li><a href="Đạo.html">Đạo</a></li>
                     <li><a href="Phúc.html">Phúc</a></li>
-                    <li><a href="#">Thành viên 4</a></li>
+                    <li><a href="huy.html">Huy</a></li>
                     <li><a href="Hải.html" class="active">Hải</a></li>
                 </ul>
             </nav>
