--- a/Phúc.html
+++ b/Phúc.html
@@ -138,7 +138,7 @@
                     <li><a href="Thoại.html">Thoại</a></li>
                     <li><a href="Đạo.html">Đạo</a></li>
                     <li><a href="Phúc.html" class="active">Phúc</a></li>
-                    <li><a href="#">Thành viên 4</a></li>
+                    <li><a href="huy.html">Huy</a></li>
                     <li><a href="Hải.html">Hải</a></li>
                 </ul>
             </nav>
