--- a/Thoại.html
+++ b/Thoại.html
@@ -163,7 +163,7 @@
                     <li><a href="Thoại.html"  class="active">Thoại</a></li>
                     <li><a href="Đạo.html">Đạo</a></li>
                     <li><a href="Phúc.html">Phúc</a></li>
-                    <li><a href="#">Thành viên 4</a></li>
+                    <li><a href="huy.html">Huy</a></li>
                     <li><a href="Hải.html">Hải</a></li>
                 </ul>
             </nav>
