--- a/home.html
+++ b/home.html
@@ -164,7 +164,7 @@
                     <li><a href="Thoại.html">Thoại</a></li>
                     <li><a href="Đạo.html">Đạo</a></li>
                     <li><a href="Phúc.html">Phúc</a></li>
-                    <li><a href="#">Thành viên 4</a></li>
+                    <li><a href="huy.html">Huy</a></li>
                     <li><a href="Hải.html">Hải</a></li>
                 </ul>
             </nav>
@@ -197,12 +197,12 @@
                     <p>Ước gì được gánh!!</p>
                 </div>
                 <div class="member">
-                    <img src="" alt="Ảnh không hiển thị được">
-                    <h3>Thành viên</h3>
-                    <p>Giới thiệu</p>
+                    <img src="assets/huy.jpg" alt="Ảnh không hiển thị được">
+                    <h3>Nguyễn Cát Huy</h3>
+                    <p>21127300</p>
                 </div>
                 <div class="member">
-                    <img src="assets/hai.jpg">
+                    <img src="assets/hai.jpg" alt="Ảnh không hiển thị được">
                     <h3>Đinh Viết Hải - 23127045</h3>
                     <p>Hợp tác vui vẻ cùng qua môn ạ</p>
                 </div>
