--- a/Hải.html
+++ b/Hải.html
@@ -75,13 +75,13 @@
             background: linear-gradient(to right, #2a6dfc, #5c93ff);
             color: #fff;
             text-align: center;
-            padding: 60px 0 40px;
+            padding: 10px 0;
             margin-bottom: 40px;
         }
 
         .member-hero h1 {
             font-size: 3rem;
-            margin-bottom: 15px;
+            margin-bottom: 5px;
         }
 
         .member-hero p {
@@ -228,7 +228,7 @@
     </header>
     <section class="member-hero">
         <div class="container">
-            <h1>Chào mừng đến với trang của tôi</h1>
+            <h1>WELCOM</h1>
         </div>
     </section>
 
