sửa màu chữ trong Hải.html

--- a/Hải.html
+++ b/Hải.html
@@ -73,7 +73,7 @@
 
         .member-hero {
             background: linear-gradient(to right, #2a6dfc, #5c93ff);
-            color: #fff;
+            color: #FF0000;
             text-align: center;
             padding: 10px 0;
             margin-bottom: 40px;
