--- a/home.html
+++ b/home.html
@@ -197,9 +197,8 @@
                     <p>Ước gì được gánh!!</p>
                 </div>
                 <div class="member">
-                    <img src="assets/huy.jpg" alt="Ảnh không hiển thị được">
-                    <h3>Nguyễn Cát Huy</h3>
-                    <p>21127300</p>
+                    <img src="assets/huy.jpg" alt="Ảnh không hiển thị được" width="60px" height="100px">
+                    <h3>Nguyễn Cát Huy - 21127300</h3>
                 </div>
                 <div class="member">
                     <img src="assets/hai.jpg" alt="Ảnh không hiển thị được">
