--- a/home.html
+++ b/home.html
@@ -197,7 +197,7 @@
                     <p>Ước gì được gánh!!</p>
                 </div>
                 <div class="member">
-                    <img src="assets/huy.jpg" alt="Ảnh không hiển thị được" width="60px" height="100px">
+                    <img src="assets/huy.jpg" alt="Ảnh không hiển thị được">
                     <h3>Nguyễn Cát Huy - 21127300</h3>
                 </div>
                 <div class="member">
