--- a/home.html
+++ b/home.html
@@ -211,7 +211,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; Nhóm Web Development - 23KTPM1 - GA01 - 2025</p>
+            <p>&copy; 2025 Nhóm Web Development - 23KTPM1 - GA01</p>
         </div>
     </footer>
 
