--- a/Phúc.html
+++ b/Phúc.html
@@ -188,7 +188,7 @@
         <div class="sidebar">
             <div class="info-container">
                 <div class="header" style="display: flex; flex-direction: row; align-items: center;">                      
-                    <img src="/assets/pencil.png" alt="." style="width: 50px; height: 50px;">
+                    <img src="assets/pencil.png" alt="." style="width: 50px; height: 50px;">
                     <div class="basic-info" style="margin: 0px 20px">
                         <p style="margin: 0 0; font-size: 20px; color: #333">Skills</p>
                         <p style="margin: 0 0; font-size: 15px; color: #555">Các kỹ năng đã được học</p>
