update avatar picture

--- a/Phúc.html
+++ b/Phúc.html
@@ -28,7 +28,7 @@
         <div class="flex-1 max-w-lg mx-4">
             <div class="bg-cover bg-no-repeat bg-right p-6 rounded-xl shadow-lg" style="background-image: url('assets/bg.png');">
                 <div class="text-center">
-                    <img src="assets/game.jpg" alt="Phuc" class="w-full h-auto mb-6">
+                    <img src="assets/phucbill.jpg" alt="Phuc" class="w-full h-auto mb-6">
                 </div>
 
                 <div class="border-t-2 border-gray-300 my-6"></div>
